--- a/src/dotnet-aws-console-app/dotnet-aws-console-app.csproj
+++ b/src/dotnet-aws-console-app/dotnet-aws-console-app.csproj
@@ -8,4 +8,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.2.43" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dotnet-aws-integration\dotnet-aws-integration.csproj" />
+  </ItemGroup>
+
 </Project>
