--- a/src/dotnet-aws-integration/dotnet-aws-integration.csproj
+++ b/src/dotnet-aws-integration/dotnet-aws-integration.csproj
@@ -1,17 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>dotnet_aws_integration</RootNamespace>
-    <UserSecretsId>92453cee-8b93-47da-9151-b56650acfc54</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>.</DockerfileContext>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.2.43" />
   </ItemGroup>
 
 </Project>
