implemented and pushed lambda

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /src/dotnet-aws-console-app/bin/Debug/net6.0
 /src/dotnet-aws-console-app/obj
 /src/dotnet-aws-integration/bin/Debug/netstandard2.1
+src/dotnet-aws-integration/.vs/dotnet-aws-integration/DesignTimeBuild/.dtbcache.v2
+terraform/modules/lambda/function/nathan-lambda.zip
