--- a/src/dotnet-aws-integration/dotnet-aws-integration.csproj
+++ b/src/dotnet-aws-integration/dotnet-aws-integration.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.SQS" Version="3.7.2.43" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
