--- a/src/dotnet_aws_integration.IntegrationTests/appsettings.json
+++ b/src/dotnet_aws_integration.IntegrationTests/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "apigateway-url": "https://0z89x3ti55.execute-api.af-south-1.amazonaws.com/dev/nathanresource"
+  "apigateway-url": "https://ko80r31izi.execute-api.af-south-1.amazonaws.com/dev/nathanresource"
 }
